# jackvm-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE_MIT  README.md  index.html  package-lock.json  package.json  webpack.config.js
assets/: index.260082d2e9d3a65f4e72.js  index.260082d2e9d3a65f4e72.js.map  index.2b5c2ddded2941023836.js  index.2b5c2ddded2941023836.js.map  index.311b3e3dfe438b03082f.js  index.311b3e3dfe438b03082f.js.map  index.5da1d2254c6377137b54.css  index.5f27d378fffc0ef45346.css  index.6938d1159802afc1a002.css  index.9476021911bd234eab1a.js  index.9476021911bd234eab1a.js.map  index.9f207d360a401abc236a.js  index.9f207d360a401abc236a.js.map  index.cd37d67260f1cc1589a0.css  index.e4192e036004b5f49872.css  index.f37cdb8c1bf2b82d3a7f.js  index.f37cdb8c1bf2b82d3a7f.js.map  manifest.json
compiler/: Cargo.toml  build.sh
compiler/src/: lib.rs  (+1 more)
css/: tailwind.css
demo/: README.md  bootstrap.js  debugger.js  demo.html  index.html  index.js  package-lock.json  package.json  webpack.config.js
doc/: architecture.md
frontend/: index.html  index.js  package-lock.json  package.json  webpack.config.js
jackvm-rs.github.io/: .eleventy.js  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  webpack.config.js
js/: _js_index_js.bootstrap.js  _js_index_js.bootstrap.js.map  bootstrap.js  bootstrap.js.map  index.js
pkg/: package.json
src/: compiler.rs  jack_os.rs  lib.rs  vm.rs
static/: index.html
tests/: compiler.rs  helper.rs  integration.rs  integration_array.rs  integration_math.rs  integration_memory.rs  web.rs
vm/: Cargo.toml
vms/: average.vm  pong.vm  square-game.vm
web/: Cargo.toml  README.md  build.sh  package.json
web/src/: lib.rs  web.rs  web_vm.rs
(+34 files in other folders)
