[package]
name = "jackvm-player"
version = "0.1.7"
authors = ["Jim Connell <james.d.connell@gmail.com>"]
description = "Runs Jack Language VM files on the web"
repository = "https://github.com/jcon/jackvm-rs"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
vm = { path = "../vm" }
wasm-bindgen = "0.2.63"
assert_matches = "1.4.0"
js-sys = "0.3.46"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
]

[package.metadata.wasm-pack.profile.release]
# wasm-pack tries to automatically downlaod wasm-opt binaries from binaryen,
# but there is no package available for M1 macs. This prevents wasm-pack
# from generating a package.json
wasm-opt = false
